# dfdx-transformer-sentiment

./: Cargo.toml  README.md  model.safetensors  mymodel.npz
data/: chats.csv
src/: lib.rs  model.rs  preprocessing.rs
